<resources>
    <string name="app_name">Nuptist</string>
    <string name="by_proceeding_you_accept_the">By proceeding you accept the</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend">Resend a new code.</string>
    <string name="create">Please type the verification code sent to Mobile number</string>
    <string name="mobile">Mobile no</string>
    <string name="agree">I agree to receive updates regarding my Acron.</string>
    <string name="Create_account">Terms</string>
    <string name="privecy">Privacy and Policy</string>
    <string name="enterphonenumber">Enter your phone number</string>
    <string name="continues">Continue</string>
    <string name="setlocation">Set your location to see services around you</string>
    <string name="hint">We only acess your location while you are using the app to improve your experience.</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Profile</string>
    <string name="title_notifications">Chats</string>
    <string name="label_loading">loading</string>
    <string name="facial"><![CDATA[Facial & Cleanup]]></string>
    <string name="title_booking">Booking</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Help Center</string>
    <string name="title_about">About Company</string>
    <string name="SaveAddress">Faq</string>
    <string name="Logout">Log Out</string>
    <string name="thanksmsg">Thanks Your Order has been successfully submited</string>
    <string name="deliverymsg">Our professional will arrive soon....</string>
    <string name="entername">Full Name</string>
    <string name="enterEmail">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phoneNumber">Phone Number</string>
    <string name="Login">Login</string>
    <string name="agrees">To use Acron Inc, you agree to follow standard for healthyd safe tasking, shared by everyone in our community</string>
    <string name="Order_id">Order Id</string>
    <string name="orderrecieved">Confirmed</string>
    <string name="ontheway">On the Way</string>
    <string name="Deliverd">Completed</string>
    <string name="DeliveryStatus">Order Date And Time</string>
    <string name="Time">20 August 6:30 PM</string>
    <string name="subtotal">Sub Total</string>
    <string name="TotalAmount">Total Amount</string>
    <string name="paymentType">Payment Type</string>
    <string name="business">Company name</string>
    <string name="title_orderhistory">Order History</string>
    <string name="filter">Filter</string>
    <string name="Latestreview">Latest Ratting and Review</string>
    <string name="sorting">Sorting</string>
    <string name="ordermsg">You have saved    100 on this order</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="locationn">B3 205, Nano city, Scheme 114 \n
part 2, Indore, MP, 452010</string>
    <string name="menu_home">Home</string>
    <string name="accepted">Your Order has been \n accepted</string>
    <string name="processed">Your transaction has completed successfully at 21 April, 2022 10:53 AM</string>
    <string name="menu_gallery">Gallery</string>
    <string name="moneyrevert">Money revert back succesfully</string>
    <string name="home">Back to home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="fruits"><![CDATA[Fruits & Vegitable]]></string>
    <string name="feature_product"><![CDATA[Best priced fruits & veggies]]></string>
    <string name="menu_mysubscription">My Subscriptions</string>
    <string name="menu_shopbycat">Shop by Category</string>
    <string name="menu_ordercalender">Order by Calender</string>
    <string name="menu_wallettransection">Transaction history</string>
    <string name="menu_support">Support</string>
    <string name="voucher">Paytm Voucher</string>
    <string name="menu_faq">FAQs</string>
    <string name="tandc">*T &amp;C apply</string>
    <string name="usr">One time per user</string>
    <string name="shopping">On shopping for 1999</string>
    <string name="order">Minimum order value 599</string>
    <string name="peruser">One time per user</string>
    <string name="free">Buy 1 Get 1 Free</string>
    <string name="value">Minimum order value 599</string>
    <string name="onetim">One time per user</string>
    <string name="apply">Apply on first purchase</string>
    <string name="menu_referandearn"><![CDATA[Refer & earn]]></string>
    <string name="menu_offers">Offers</string>
    <string name="menu_history">My Order</string>
    <string name="val">Minimum order value 599</string>
    <string name="verify"><![CDATA[Verify & Sign In]]></string>
    <string name="firstpurchas">Apply on first purchase</string>
    <string name="menu_myaccount">My account</string>
    <string name="amzon">Paytm, Payzapp, Amazon pay, mobiwik etc</string>
    <string name="amzonss">Viza, Rupay, Paypal, etc</string>
    <string name="googlepay">Google pay, Phone pe, Paytm, BHIM UPI, etc</string>
    <string name="msg">Your transaction has completed\n successfully at 21 April, 2022 10:53 AM</string>
    <string name="dateandtime"><![CDATA[Select Prefered Date & Time]]></string>
    <string name="tandc1">By Signing up,you agree to our Terms &amp; Codition</string>
    <string name="title_more">Favourites</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_vendor_home">VendorHomeActivity</string>
    <string name="title_advertize">Advertise</string>
    <string name="title_membrship">Membrship</string>
    <string name="title_dash">Dashboard</string>
    <string name="amount">$500</string>
    <string name="amounts">or $50/m.</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="custom_package">Package Summary</string>
    <string name="confirmation">Confirmation</string>
    <string name="budgetary_quote">Pricing Details</string>
    <string name="recover_your_password">Recover Your Password</string>
    <string name="enter_registered_email_address">Enter Registered Email Address</string>
    <string name="facebook_app_id">1301363470430074</string>
    <string name="facebook_client_token">9675350f088b091adbb9365955799ead</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="get_password">Get Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="service">Service</string>
    <string name="service_available">Service Available</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="firstname_name">Firstname</string>
    <string name="_1234567890">1234567890</string>
    <string name="address">Address</string>
    <string name="upload_cover_photo">Upload Cover Photo</string>
    <string name="browse_and_choose_picture_you_want_to_want_to_make_it_cover">Browse and choose picture you want to want to make it cover</string>
    <string name="browse_picture">Browse Picture</string>
    <string name="upload_photo_gallery">Upload Photo Gallery</string>
    <string name="request_to_approve">Request to Approve</string>
    <string name="email">Email</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="kamal_me_gmail_com">kamal.me@gmail.com</string>
    <string name="update_profile">Update Profile</string>
    <string name="venue_registration_details">Venue Registration Details</string>
    <string name="add_venue">Add Venue</string>
    <string name="venue_name">Venue Name</string>
    <string name="guest_capacity">Guest Capacity</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="dining_capacityx">Dining Capacity</string>
    <string name="parking_available_2_wheelers">Parking Available (2 Wheelers)</string>
    <string name="parking_available_3_wheelers">Parking Available (3 Wheelers)</string>
    <string name="parking_available_4_wheelers">Parking Available (4 Wheelers)</string>
    <string name="venue_features_1_optional">Venue Features 1 (Optional)</string>
    <string name="venue_features_2_optional">Venue Features 2 (Optional)</string>
    <string name="venue_features_3_optional">Venue Features 3 (Optional)</string>
    <string name="venue_features_4_optional">Venue Features 4 (Optional)</string>
    <string name="venue_features_5_optional">Venue Features 5 (Optional)</string>
    <string name="can_nuptist_include_venue_for_packages">Can Nuptist include venue for packages?</string>
    <string name="will_you_work_with_nuptist_s_recommended_vendor_s">Will You work with Nuptist\'s recommended vendor\'s</string>
    <string name="description">Description</string>
    <string name="update_venue">Update Venue</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="service_addressx">Service Address</string>
    <string name="your_venue">Your Venue</string>
    <string name="privacy_and_policy">Privacy Policy</string>
    <string name="upload_user_image">Upload User Image</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="add_images">Add Images</string>
    <string name="update_images">Update Images</string>
    <string name="plan_my_event">Plan My Event</string>
    <string name="make_a_booking">Make booking</string>
    <string name="map_api_key">AIzaSyA19w6o9vSEha7kwN00jpmWB4vKetJkAmk</string>
    <string name="packages_list">Packages List</string>
    <string name="switch_to_business">Switch To Business Account</string>
    <string name="business_to_personal">Switch To Business Account</string>
    <string name="see_privacy_and_police">See Privacy and Police</string>
    <string name="no_packages_found">No Packages Found.!</string>
    <string name="all_packages">All Packages</string>
    <string name="bid_now">Bid Now</string>
    <string name="add_bid">Add Quote</string>
    <string name="my_bids">My Add Once Quote</string>
    <string name="my_bids2">My Offer Quote</string>
    <string name="service_address">Service Address</string>
    <string name="your_booking_is_ready_and_suitable_for_the_specified_date">Your booking is ready and suitable for the specified date</string>
    <string name="add_review">Add Review</string>
    <string name="added">Added</string>
    <string name="venue_price">Venue Price</string>
    <string name="customize">Customize</string>
    <string name="terms_and_condition">Terms And Condition</string>
</resources>