<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_homeuser"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_saleuser"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_purchaseuser"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_moreuser"
        android:icon="@drawable/ic_like"
        android:title="@string/title_more" />

<!--
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />-->

</menu>