<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.Nuptist.VendorUi.home.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_advertize"
        android:name="com.Nuptist.VendorUi.Advertize.AdvertizeFragment"
        android:label="@string/title_advertize"
        tools:layout="@layout/fragment_advertize" />

    <fragment
        android:id="@+id/navigation_membrship"
        android:name="com.Nuptist.VendorUi.Membership.MembershipFragment"
        android:label="@string/title_membrship"
        tools:layout="@layout/fragment_membership" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.Nuptist.VendorUi.vendorprofile.VendorProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_vendor_profile" />
</navigation>